# udemy-llm-apps

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
pages/: function_calling.py  qa.py  recipe.py  simple_chat.py  sql.py  tagging.py
