[tool.poetry]
name = "udemy-llm-apps"
version = "0.1.0"
description = ""
authors = ["Satoshi Yamamoto <satoshi_yamamoto@cyberagent.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.25.0"
openai = "0.27.8"
pydantic = "1.10.12"
stability-sdk = "0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
